# yaslha

./: .gitignore  .travis.yml  LICENSE  README.md  makefile  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: type-check.yaml  unit-test.yaml
docs/: Makefile  api_reference.rst  conf.py  foot_matter.tex.in  index.rst  introduction.rst  quick_start.rst  references.bib  requirements.txt
docs/_templates/: latex.tex_t
docs/_themes/: sphinx_customize.py
yaslha/: __init__.py  _collections.py  _collections.pyi  _line.py  block.py  comment.py  comment.pyi  config.py  core.py  dumper.py  exceptions.py  line.py  marshal.py  parser.py  script.py  slha.py  utility.py  yaslha.cfg.default
yaslha/tests/: __init__.py  test_collections.py  test_converter.py  test_copy.py
yaslha/tests/data/: sps1a.spc
yaslha/tests/data/pylha_json/: SPheno-2.spc.MSSM.json  SPheno.spc.MSSM.json  SPheno.spc.json  isajet.txt.json  isasusy.spc.json  sdecay.bin.json  slha.txt.json  softsusy.spc.json  sps1a.spc.json
yaslha/tests/data/pylha_yaml/: SPheno-2.spc.MSSM.yaml  SPheno.spc.MSSM.yaml  SPheno.spc.yaml  isajet.txt.yaml  isasusy.spc.yaml  sdecay.bin.yaml  slha.txt.yaml  softsusy.spc.yaml  sps1a.spc.yaml
yaslha/tests/examples/: test_example1_basic.py  test_example2_simple.py  test_example3_advanced.py  test_example4_decay.py  test_example5_blocks.py  test_example6_comment.py
