[tool.poetry]
name = "yaslha"
version = "0.2.2"
description = "A Python package to handle SLHA (SUSY Les Houches Accord) files."
authors = ["Sho Iwamoto (Misho) <webmaster@misho-web.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/misho104/yaslha"

[tool.poetry.dependencies]
python = "^3.7.1 || ^3.8"
click = "^7.1"
"ruamel.yaml" = "^0.16"
colorama = "^0.4"
coloredlogs = "^15.0"
typing-extensions = "^3.7"
numpy = "^1.20"

[tool.poetry.dev-dependencies]
nose = "^1.3"
coverage = "^4.5"
coveralls = "^1.5"
mypy = "^0.710"
flake8 = "^3.7"
flake8-builtins = "^1.4"
flake8-commas = "^2.0"
flake8-comprehensions = "^1.4"
flake8-docstrings = "^1.3"
flake8-isort = "^2.6"
flake8-logging-format = "^0.6"
pep8-naming = "^0.7"

[tool.poetry.scripts]
yaslha= "yaslha.script:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
